--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[codz]
 *$py.class
-
+.gpk
 # C extensions
 *.so
 
@@ -54,7 +54,11 @@ cover/
 # Translations
 *.mo
 *.pot
-
+#Data file stuff
+.cpg
+.dbf
+.shp
+.shx
 # Django stuff:
 *.log
 local_settings.py
